second commit change parameter

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -188,33 +188,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "44175a8c-2453-4f12-b90c-2490f784b364",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved 724 records to commodity_data.csv\n",
-      "⚠️ Could not predict for jute: No records found for jute with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\n",
-      "⚠️ Could not predict for coffee: No records found for coffee with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\n",
-      "Saved 1080 records to commodity_data.csv\n",
-      "⚠️ Could not predict for muskmelon: No records found for muskmelon with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\n",
-      "\n",
-      "Final Predicted Prices for Top Crops:\n",
-      "rice: 2954.74 INR\n",
-      "jute: 0.00 INR\n",
-      "coffee: 0.00 INR\n",
-      "banana: 1162.21 INR\n",
-      "muskmelon: 0.00 INR\n"
+     "ename": "TypeError",
+     "evalue": "recommend_and_predict_prices() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[33], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m test_params \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m90\u001b[39m, \u001b[38;5;241m42\u001b[39m, \u001b[38;5;241m43\u001b[39m, \u001b[38;5;241m20.87\u001b[39m, \u001b[38;5;241m82.00\u001b[39m, \u001b[38;5;241m6.5\u001b[39m, \u001b[38;5;241m200.0\u001b[39m]  \u001b[38;5;66;03m# Your soil and weather test sample\u001b[39;00m\n\u001b[0;32m      2\u001b[0m params \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfilters[State]\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWest Bengal\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfilters[District]\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKolkata\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m     }\n\u001b[1;32m----> 6\u001b[0m predicted_prices \u001b[38;5;241m=\u001b[39m \u001b[43mrecommend_and_predict_prices\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_params\u001b[49m\u001b[43m,\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mFinal Predicted Prices for Top Crops:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m crop, price \u001b[38;5;129;01min\u001b[39;00m predicted_prices\u001b[38;5;241m.\u001b[39mitems():\n",
+      "\u001b[1;31mTypeError\u001b[0m: recommend_and_predict_prices() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
     "test_params = [90, 42, 43, 20.87, 82.00, 6.5, 200.0]  # Your soil and weather test sample\n",
-    "\n",
-    "predicted_prices = recommend_and_predict_prices(test_params)\n",
+    "params = {\n",
+    "        \"filters[State]\": \"West Bengal\",\n",
+    "        \"filters[District]\": \"Kolkata\"\n",
+    "    }\n",
+    "predicted_prices = recommend_and_predict_prices(test_params,params)\n",
     "\n",
     "print(\"\\nFinal Predicted Prices for Top Crops:\")\n",
     "for crop, price in predicted_prices.items():\n",
