add prediction function

--- a/price prediction of crop.ipynb
+++ b/price prediction of crop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "84442c5b-7ff6-40e8-8be6-1b9fc0576c8e",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "6443b3ce-79a4-445c-8f3f-186284346162",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "140ab86d-5134-418f-85c0-c98acbaa4f22",
    "metadata": {},
    "outputs": [
@@ -142,9 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 724 records to commodity_data.csv\n",
-      "Predicted Price for Rice after 6 months: 3132.49 INR\n",
-      "✅ Full model pipeline saved as 'commodity_price_prediction_pipeline.pkl'!\n"
+      "Saved 724 records to commodity_data.csv\n"
      ]
     }
    ],
