--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -20,18 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 724 records to commodity_data.csv\n",
-      "⚠️ Could not predict for jute: No records found for jute with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\n",
-      "⚠️ Could not predict for coffee: No records found for coffee with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\n",
-      "Saved 1080 records to commodity_data.csv\n",
-      "⚠️ Could not predict for muskmelon: No records found for muskmelon with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\n",
-      "\n",
-      "Final Predicted Prices for Top Crops:\n",
-      "rice: 3302.30 INR\n",
-      "jute: 0.00 INR\n",
-      "coffee: 0.00 INR\n",
-      "banana: 2652.11 INR\n",
-      "muskmelon: 0.00 INR\n"
+      "{'success': True, 'predictions': [{'crop': 'rice', 'price': 4031.025390625}, {'crop': 'jute', 'price': 0.0}, {'crop': 'coffee', 'price': 0.0}, {'crop': 'banana', 'price': 3185.618896484375}, {'crop': 'muskmelon', 'price': 0.0}], 'debug': [\"Could not predict for jute: No records found for jute with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\", \"Could not predict for coffee: No records found for coffee with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\", \"Could not predict for muskmelon: No records found for muskmelon with parameters {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}.\"], 'input_params': {'test_params': [90, 42, 43, 20.87, 82.0, 6.5, 200.0], 'filters': {'filters[State]': 'West Bengal', 'filters[District]': 'Kolkata'}}}\n"
      ]
     }
    ],
@@ -44,9 +33,10 @@
     "    }\n",
     "predicted_prices = recommend_and_predict_prices(test_params,params)\n",
     "\n",
-    "print(\"\\nFinal Predicted Prices for Top Crops:\")\n",
-    "for crop, price in predicted_prices.items():\n",
-    "    print(f\"{crop}: {price:.2f} INR\")\n"
+    "print(predicted_prices)\n",
+    "# print(\"\\nFinal Predicted Prices for Top Crops:\")\n",
+    "# for crop, price in predicted_prices.items():\n",
+    "#     print(f\"{crop}: {price:.2f} INR\")\n"
    ]
   },
   {
@@ -60,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv310",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
